--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         </header>
         <div class="section__body">
           <div class="services">
-            <ul class="services__list">
+            <ul class="services__list grid grid--2">
               <li class="services__item">
                 <article class="service-card">
                   <div class="service-card__body">
