--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
       <section class="section container">
         <header class="section__header">
-          <h2 class="section__header puddle-bg">Services</h2>
+          <h2 class="section__title puddle-bg">Services</h2>
           <div class="section__description">
             <p>
               At our digital marketing agency, we offer a range of services to help businesses grow
@@ -159,7 +159,7 @@
               <li class="services__item">
                 <article class="service-card">
                   <div class="service-card__body">
-                    <h3 class="service-card-title">
+                    <h3 class="service-card__title">
                       <span class="puddle-bg">Search engine</span>
                       <span class="puddle-bg">optimization</span>
                     </h3>
@@ -193,7 +193,7 @@
               <li class="services__item">
                 <article class="service-card service-card--accent-bg">
                   <div class="service-card__body">
-                    <h3 class="service-card-title">
+                    <h3 class="service-card__title">
                       <span class="puddle-bg puddle-bg--light">Pay-per-click</span>
                       <span class="puddle-bg puddle-bg--light">advertising</span>
                     </h3>
@@ -227,7 +227,7 @@
               <li class="services__item">
                 <article class="service-card service-card--dark-bg">
                   <div class="service-card__body">
-                    <h3 class="service-card-title">
+                    <h3 class="service-card__title">
                       <span class="puddle-bg puddle-bg--light">Social Media</span>
                       <span class="puddle-bg puddle-bg--light">Marketing</span>
                     </h3>
@@ -261,7 +261,7 @@
               <li class="services__item">
                 <article class="service-card">
                   <div class="service-card__body">
-                    <h3 class="service-card-title">
+                    <h3 class="service-card__title">
                       <span class="puddle-bg">Email</span>
                       <span class="puddle-bg">Marketing</span>
                     </h3>
@@ -295,7 +295,7 @@
               <li class="services__item">
                 <article class="service-card service-card--accent-bg">
                   <div class="service-card__body">
-                    <h3 class="service-card-title">
+                    <h3 class="service-card__title">
                       <span class="puddle-bg puddle-bg--light">Content</span>
                       <span class="puddle-bg puddle-bg--light">Creation</span>
                     </h3>
@@ -329,7 +329,7 @@
               <li class="services__item">
                 <article class="service-card service-card--dark-bg">
                   <div class="service-card__body">
-                    <h3 class="service-card-title">
+                    <h3 class="service-card__title">
                       <span class="puddle-bg">Analytics and</span>
                       <span class="puddle-bg">Tracking</span>
                     </h3>
@@ -376,7 +376,7 @@
                 <img
                   src="./images/banner-bg.svg"
                   alt=""
-                  class="banner__image"
+                  class="banner__image hidden-mobile"
                   width="494"
                   height="394"
                   loading="lazy"
