feat: add team section desktop styles

--- a/index.html
+++ b/index.html
@@ -607,11 +607,11 @@
                       loading="lazy"
                     />
                     <div class="team-card__info">
-                      <h3 class="team-card__name">John Smith</h3>
+                      <h3 class="team-card__name h4">John Smith</h3>
                       <p class="team-card__post">CEO and Founder</p>
                     </div>
                     <a href="/" class="team-card__link" target="_blank">
-                      <span class="visualy-hidden">LinkedIn</span>
+                      <span class="visually-hidden">LinkedIn</span>
                       <svg
                         width="17"
                         height="17"
@@ -651,11 +651,11 @@
                       loading="lazy"
                     />
                     <div class="team-card__info">
-                      <h3 class="team-card__name">Jane Doe</h3>
+                      <h3 class="team-card__name h4">Jane Doe</h3>
                       <p class="team-card__post">Director of Operations</p>
                     </div>
                     <a href="/" class="team-card__link" target="_blank">
-                      <span class="visualy-hidden">LinkedIn</span>
+                      <span class="visually-hidden">LinkedIn</span>
                       <svg
                         width="17"
                         height="17"
@@ -695,11 +695,11 @@
                       loading="lazy"
                     />
                     <div class="team-card__info">
-                      <h3 class="team-card__name">Michael Brown</h3>
+                      <h3 class="team-card__name h4">Michael Brown</h3>
                       <p class="team-card__post">Senior SEO Specialist</p>
                     </div>
                     <a href="/" class="team-card__link" target="_blank">
-                      <span class="visualy-hidden">LinkedIn</span>
+                      <span class="visually-hidden">LinkedIn</span>
                       <svg
                         width="17"
                         height="17"
@@ -739,11 +739,11 @@
                       loading="lazy"
                     />
                     <div class="team-card__info">
-                      <h3 class="team-card__name">Emily Johnson</h3>
+                      <h3 class="team-card__name h4">Emily Johnson</h3>
                       <p class="team-card__post">PPC Manager</p>
                     </div>
                     <a href="/" class="team-card__link" target="_blank">
-                      <span class="visualy-hidden">LinkedIn</span>
+                      <span class="visually-hidden">LinkedIn</span>
                       <svg
                         width="17"
                         height="17"
@@ -783,11 +783,11 @@
                       loading="lazy"
                     />
                     <div class="team-card__info">
-                      <h3 class="team-card__name">Brian Williams</h3>
+                      <h3 class="team-card__name h4">Brian Williams</h3>
                       <p class="team-card__post">Social Media Specialist</p>
                     </div>
                     <a href="/" class="team-card__link" target="_blank">
-                      <span class="visualy-hidden">LinkedIn</span>
+                      <span class="visually-hidden">LinkedIn</span>
                       <svg
                         width="17"
                         height="17"
@@ -827,11 +827,11 @@
                       loading="lazy"
                     />
                     <div class="team-card__info">
-                      <h3 class="team-card__name">Sarah Kim</h3>
+                      <h3 class="team-card__name h4">Sarah Kim</h3>
                       <p class="team-card__post">Content Creator</p>
                     </div>
                     <a href="/" class="team-card__link" target="_blank">
-                      <span class="visualy-hidden">LinkedIn</span>
+                      <span class="visually-hidden">LinkedIn</span>
                       <svg
                         width="17"
                         height="17"
@@ -860,7 +860,7 @@
                 </article>
               </li>
             </ul>
-            <button class="team__butoon button" type="button">See all team</button>
+            <button class="team__button button" type="button">See all team</button>
           </div>
         </div>
       </section>
