--- a/index.html
+++ b/index.html
@@ -1091,6 +1091,46 @@
           </div>
         </div>
       </section>
+
+      <section class="section container">
+        <header class="section__header">
+          <h2 class="section__title puddle-bg">Contact Us</h2>
+          <div class="section__description">
+            <p>Connect with Us: Let's Discuss Your Digital Marketing Needs</p>
+          </div>
+        </header>
+        <div class="section__body">
+          <div class="contact-us">
+            <form class="contact-us__form">
+              <fieldset class="contact-us__request-types radios">
+                <legend class="radios__title">Request type</legend>
+                <label class="radios__item radio">
+                  <input
+                    type="radio"
+                    class="radio__input visually-hidden"
+                    name="request-type"
+                    value="Say Hi"
+                  />
+                  <span class="radio__emulator"></span>
+                  <span class="radio__label">Say Hi</span>
+                </label>
+                <label class="radios__item radio">
+                  <input
+                    type="radio"
+                    class="radio__input visually-hidden"
+                    name="request-type"
+                    value="Say Hi"
+                  />
+                  <span class="radio__emulator"></span>
+                  <span class="radio__label">Say Hi</span>
+                </label>
+              </fieldset>
+              <div class="contact-us__body"></div>
+              <button class="contact-us__button button" type="submit">Send Message</button>
+            </form>
+          </div>
+        </div>
+      </section>
     </main>
 
     <dialog class="mobile-overlay visible-mobile" id="mobileOverlay">
