feat: add contact-us section layout

--- a/index.html
+++ b/index.html
@@ -1110,6 +1110,7 @@
                     class="radio__input visually-hidden"
                     name="request-type"
                     value="Say Hi"
+                    checked
                   />
                   <span class="radio__emulator"></span>
                   <span class="radio__label">Say Hi</span>
@@ -1119,13 +1120,39 @@
                     type="radio"
                     class="radio__input visually-hidden"
                     name="request-type"
-                    value="Say Hi"
+                    value="Get a Quote"
                   />
                   <span class="radio__emulator"></span>
-                  <span class="radio__label">Say Hi</span>
+                  <span class="radio__label">Get a Quote</span>
                 </label>
               </fieldset>
-              <div class="contact-us__body"></div>
+              <div class="contact-us__body">
+                <div class="contact-us__field field">
+                  <label class="field__label" for="name">Name</label>
+                  <input class="field__input" id="name" name="name" placeholder="Name" />
+                </div>
+                <div class="contact-us__field field">
+                  <label class="field__label" for="email">Email*</label>
+                  <input
+                    class="field__input"
+                    id="email"
+                    name="email"
+                    placeholder="Email"
+                    type="email"
+                    required
+                  />
+                </div>
+                <div class="contact-us__field field">
+                  <label class="field__label" for="message">Message*</label>
+                  <textarea
+                    class="field__input field__input--textarea"
+                    id="message"
+                    name="message"
+                    placeholder="Message"
+                    required
+                  ></textarea>
+                </div>
+              </div>
               <button class="contact-us__button button" type="submit">Send Message</button>
             </form>
           </div>
