--- a/index.html
+++ b/index.html
@@ -1103,7 +1103,7 @@
           <div class="contact-us">
             <form class="contact-us__form">
               <fieldset class="contact-us__request-types radios">
-                <legend class="radios__title">Request type</legend>
+                <legend class="radios__title visually-hidden">Request type</legend>
                 <label class="radios__item radio">
                   <input
                     type="radio"
